Fix search on mobile

--- a/src/_assets/stylesheets/_overwrites.scss
+++ b/src/_assets/stylesheets/_overwrites.scss
@@ -1,5 +1,9 @@
 // Make all css changes here. These change will get added into the current SCSS structure where applicable.
 
+$screen-lg-min: 1200px;
+$screen-md-min: 992px;
+$screen-sm-min: 768px;
+
 /* Add space between definitions. */
 dd {
 	margin-bottom: 15px;
@@ -20,11 +24,18 @@ a code {
 	color: #fff;
 }
 
-// FRONT-PAGE RELATED
+// SIDE NAV
 
-$screen-lg-min: 1200px;
-$screen-md-min: 992px;
-$screen-sm-min: 768px;
+.sidenav__search {
+	margin-bottom: 20px;
+	display: none;
+
+	@media(max-width: 479px) {
+		display: block;
+	}
+}
+
+// FRONT-PAGE RELATED
 
 /* Code sample */
 
